--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <br>
         <span id="colordisplay">RGB</span>
         <br>
-         Color  Guessing Game</h1>
+         Color  Guessing Games</h1>
     <div id="stripe">
         <button id="reset">New Colors</button>
         <span id="message"></span>
